Working on firefox bug in CLI

--- a/css/dynamic_styles.css
+++ b/css/dynamic_styles.css
@@ -24,3 +24,8 @@ A{
   padding-bottom: 10px;
   margin-bottom: 10px;
 }
+
+.fleft{
+  float: left;
+  margin-right: 10px;
+}
